tests/regression/errors/basic/import_error_25.csd
// Import error test 25
yeet "nonexistent_module_25"
sus result drip = some_function(25)
